fix tables styles

--- a/src/eskv.ui/style.scss
+++ b/src/eskv.ui/style.scss
@@ -26,3 +26,18 @@
 
 }
 
+table th {
+    padding-left: 0.75em;
+    padding-right: 0.75em;
+
+}
+
+table td a {
+    padding-left: 0.75em;
+
+}
+
+table td div {
+    padding-left: 0.75em;
+}
+
